# github-pr-finder

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
backlog/: config.yml
src/: App.css  App.tsx  constants.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MemberSettings.tsx  PRView.css  PRView.tsx  RepositorySettings.tsx  Settings.css  Settings.tsx  SyncData.css  SyncData.tsx  TokenSettings.tsx
src/utils/: database.ts
